modules/webgl/tests/cpp-expr-2.vs.exp
"cpp-expr-2.vs":1: P0001: CPP syntax error:
2A 3
int X = 2;
void
