modules/webgl/tests/cpp-expr-2.vs
#define 2A 3
int X = 2;
void
main()
{
    return;
}
